@@ -1,3 +1,4 @@
+- Improvement: Add AccountabilityType as UnitGroup argument (and deprecate AccountabilityTypeEnum)
 - Refactor: Teacher authorizations for units, instead of departments
 - Refactor: Cleanup deprecated DepartmentForum
 - Refactor: Cleanup deprecated department argument in TeacherGroup
